Changing the id to make more meaningful as this app can be used by single user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ startup-actions.initializeProfiles=true
 datingai.lookingForGender=woman
 
 # User's profile
-datingai.character.user={id:'1', firstName:'Omkar', lastName:'Shivadekar', age:30, ethnicity:'Indian', gender:'MALE', bio:'Software engineer and learner. I like reading and making things.', imageUrl:'', myersBriggsPersonalityType:'INTP'}
+datingai.character.user={id:'user', firstName:'Omkar', lastName:'Shivadekar', age:30, ethnicity:'Indian', gender:'MALE', bio:'Software engineer and learner. I like reading and making things.', imageUrl:'', myersBriggsPersonalityType:'INTP'}
 
